# SSP

./: .gitignore  LICENSE  README.md  process_dataset.sh  pyproject.toml  requirements.txt
config/image/: base_acppd.yaml  base_drone.yaml  base_uavid.yaml  convnext_acppd.yaml  convnext_drone.yaml  kd_base_rural.yaml  kd_base_uavid.yaml  teacher_rural.yaml  teacher_uavid.yaml  untrained_uavid.yaml
config/video/: ablation_consistencyloss.yaml  ablation_cossim.yaml  ablation_interpolation.yaml  ablation_registration.yaml  dff_rural.yaml  dff_uavid.yaml  kd_ssp_rural.yaml  kd_ssp_uavid.yaml  lambda_0.2.yaml  lambda_0.35.yaml  lambda_0.65.yaml  netwarp_rural.yaml  netwarp_uavid.yaml  ssp_acppd.yaml  ssp_drone.yaml  ssp_rural.yaml  ssp_uavid.yaml  tcbocr_rural.yaml  tcbocr_uavid.yaml  tcbppm_rural.yaml  tcbppm_uavid.yaml
data/: dataset_prep.py  dataset_utils.py  datasets.py
data/utils/: images_transforms.py
eval/: eval.py
eval/vis/: image.py  video.py
models/image/: hiera.py  models.py  upernet.py
models/video/: mixing_layers.py  models_consistency.py  sim_layers.py
tools/: extract_frames_ruralscapes.py  organize_ruralscapes.py  prepare_ruralscapes.py  prepare_uavid.py
training/: train_image.py  train_video.py
training/utils/: utils_image.py  utils_video.py
utils/: losses.py  metrics.py  optim_utils.py  schedulers.py  tensors.py  torch_utils.py
