[project]
name = "ssp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.4",
    "beartype>=0.20.0",
    "braceexpand>=0.1.7",
    "decord>=0.6.0",
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "h5py>=3.13.0",
    "ipywidgets>=8.1.5",
    "kornia>=0.8.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "submitit>=1.5.2",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchmetrics>=1.6.1",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "webdataset>=0.2.111",
]
